mockit警告対応